[project]
name = "MMMAudio"
version = "0.1.0"
authors = [
    {name = "Sam Pluta", email = "spluta@gmail.com"},
    {name = "Ted Moore", email = "ted@tedmooremusic.com"}
]
requires-python = ">=3.14"
dependencies = [
    "setuptools<82",
    "numpy>=2.3.5,<3",
    "scipy>=1.17.0,<2",
    "librosa>=0.11.0,<0.12",
    "matplotlib>=3.10.8,<4",
    "pyside6>=6.10.2,<7",
    "umap-learn>=0.5.11,<0.6",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.1,<10",
    "mkdocstrings>=1.0.3,<2",
    "pymdown-extensions>=10.21.1,<11",
    "pygments>=2.19.2,<3",
    "mkdocstrings-python>=2.0.2,<3",
    "mkdocs-pdf>=0.1.2,<0.2",
    "mkdocs-with-pdf>=0.9.3,<0.10",
    "mkdocs-simple-hooks>=0.1.5,<0.2",
    "ipykernel>=7.1.0,<8",
    "jupyterlab>=4.5.5,<5",
    "torch>=2.10.0,<3",
    "pyautogui>=0.9.54,<0.10",
    "python-osc>=1.9.3,<2",
    "hidapi>=0.15.0,<0.16",
    "pyaudio>=0.2.14,<0.3",
    "supriya-midi>=26.5b0,<27",
]

[tool.uv]
extra-index-url = [
    "https://repo.prefix.dev/modular-community/simple"
]
